--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
 </head>
 <body>
   <div class="container">
+    <!-- Phone images -->
     <div class="phoneContainer">
      <img src="../images/phonebase.png">
     </div>
+    <!-- Sign up sheet -->
     <div class="signContainer">
       <div id="signUp">
         <img id="logo" src="../images/logo.png">
-        <p>Sign up to see photos and videos from your friends and family</p>
-        <button><a href="#" class="fa fa-facebook"></a> Log in with Facebook</button>
+        <p><span class="big">Sign up to see photos and videos from your friends.</span></p>
+        <button>
+          <img id="fb" src="images/fb.png">
+          <a id="test">Log in with Facebook</a>
+        </button>
         <div class="lineThing">
-          <hr>
-          <p style="margin-left:10%; margin-right:10%;">OR</p>
-          <hr>
+          <hr id="hrLeft">
+          <p style="margin-left:5%; margin-right:5%; font-size:10px;">OR</p>
+          <hr id="hrRight">
         </div>
         <form action="">
           <input type="text" name="mob" value="Mobile Number or Email">
@@ -29,8 +34,8 @@
           <input type="text" name="mob" value="Username">
           <input type="text" name="mob" value="Password">
         </form>
-        <button> Sign Up</button>
-        <p>By signing up, you agree to our <span id="big"> Terms & Privacy Policy</span></p>
+        <button id="signUpBtn"> Sign Up</button>
+        <p>By signing up, you agree to our <span class="big"> Terms & Privacy Policy.</span></p>
       </div>
       <div id="prevLogin">
         <p>Have an account? <a href="">Log In</a></p>
@@ -39,23 +44,24 @@
         <p> Get the app. </p>
       </div>
       <div id="storeLogos">
-        <div><img id="ios" src="../images/badge-iphone.png"></div>
-        <div><img id="android" src="../images/badge-android.png"></div>
+        <img id="ios" src="../images/badge-iphone.png"></img>
+        <img id="android" src="../images/badge-android.png"></img>
       </div>
     </div>
   </div>
+  <!-- FOOTER -->
   <footer>
-    <div><p>ABOUT US</p></div>
-    <div><p>SUPPORT</p></div>
-    <div><p>BLOG</p></div>
-    <div><p>PRESS</p></div>
-    <div><p>API</p></div>
-    <div><p>JOBS</p></div>
-    <div><p>PRIVACY</p></div>
-    <div><p>TERMS</p></div>
-    <div><p>DIRECTORY</p></div>
-    <div><p>LANGUAGE</p></div>
-    <div id="copyright"><p>&copy; 2017 Instagram</p></div>
+    <p>ABOUT US</p>
+    <p>SUPPORT</p>
+    <p>BLOG</p>
+    <p>PRESS</p>
+    <p>API</p>
+    <p>JOBS</p>
+    <p>PRIVACY</p>
+    <p>TERMS</p>
+    <p>DIRECTORY</p>
+    <p>LANGUAGE</p>
+    <p id="copyright">&copy; 2017 Instagram</p>
   </footer>
 </body>
 </html>
