Finally fixed text align issue

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div id="signUp">
         <img id="logo" src="../images/logo.png">
         <p><span class="big">Sign up to see photos and videos from your friends.</span></p>
-        <button>
+        <button id="test">
           <img id="fb" src="images/fb.png">
-          <a id="test">Log in with Facebook</a>
+          <span>Log in with Facebook</span>
         </button>
         <div class="lineThing">
           <hr id="hrLeft">
